# cdek-sdk

./: .gitignore  CLAUDE.md  ORDER_RETRIEVAL.md  PRINT_IMPLEMENTATION.md  PRINT_SERVICE.md  README.md  plan.md  pyproject.toml  req.txt  requirements.txt  test.py  test_simple.py  test_tariff_and_service.py
cdek/: __init__.py  client.py  exceptions.py
cdek-sdk/: client.py
cdek-sdk/http/: async_http.py
cdek-sdk/services/: delivery.py  intake.py  location.py  office.py  order.py  passport.py  registry.py  reverse.py
cdek/http/: __init__.py  async_http.py
cdek/models/: calculator.py  delivery.py  international.py  location.py  office.py  order.py  print.py
cdek/reference/: README.md  __init__.py  additional_types.py  delivery_modes.py  services.py  types.py
cdek/reference/data/: additional_types.json  delivery_modes.json  services.json  (+1 more)
cdek/services/: __init__.py  calculator.py  delivery.py  international.py  location.py  office.py  order.py  print.py
examples/: SERVICES_API_EXAMPLES.md  complete_delivery_flow.py  download_waybill.py  error_handling.py  fastapi_reference.py  fastapi_services_guide.py  print_waybill.py  react_delivery_selector.tsx  reference_quick_start.py
sdk/http/: async_http.py
sdk/models/: calculator.py
sdk/services/: calculator.py  check.py  location.py  office.py  photo.py  prealert.py  webhooks.py
tests/: conftest.py  test_async_http.py  test_calculator.py  test_delivery.py  test_delivery_modes.py  test_error_handling.py  test_international.py  test_location.py  test_office.py  test_order.py  test_print.py  test_reference.py
(+4 files in other folders)
